Last unicode 57, fix logo, add uc bitmap pucture/default.json

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,6 +1,6 @@
 {
     "container.inventory": "",
-    "menu.game": "ࡰ",
+    "menu.game": "",
     "menu.disconnect": "§4Do you really want to §lleave §r§3Ender§bNation§4?"
   }
   
