--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -1,6 +1,6 @@
 {
     "container.inventory": "",
-    "menu.game": "ࡰ",
+    "menu.game": "",
     "menu.disconnect": "§4Möchtest du wirklich §3Ender§bNation §4§lverlassen?"
   }
   
