--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -1,6 +1,6 @@
 {
     "container.inventory": "",
     "menu.game": "",
-    "menu.disconnect": "§4Möchtest du wirklich §3Ender§bNation §4§lverlassen?"
+    "menu.disconnect": "§4§lMöchtest du wirklich §3§lEnder§b§lNation §4§lverlassen?"
   }
   
