--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,6 +1,6 @@
 {
     "container.inventory": "",
     "menu.game": "",
-    "menu.disconnect": "§4Do you really want to §lleave §r§3Ender§bNation§4?"
+    "menu.disconnect": "§4§lDo you really want to §lleave §r§3§lEnder§b§lNation§4§l?"
   }
   
